--- a/script.imdbupdate/changelog.txt
+++ b/script.imdbupdate/changelog.txt
@@ -1,3 +1,10 @@
+v0.6.0 (2015-04-02) (Credits to sualfred):
+- added start parameter for skinners to run all updates
+- fix date parsing issue
+
+v0.5.3 (2015-02-24):
+- Helix ready
+
 v0.5.2 (2014-05-12):
 - Gotham ready
 
