--- a/skin.bellofredo/changelog.txt
+++ b/skin.bellofredo/changelog.txt
@@ -1,4 +1,14 @@
-﻿[B][COLOR=FF56ADDA]v4.1.1b[/COLOR][/B]
+﻿[B][COLOR=FF56ADDA]v4.1.2[/COLOR][/B]
+• Fixed: Overlapping issue with setttings level button
+• Fixed: Wrong up/down conditions on ThumbList view
+• Fixed: Not working kiosk mode
+• Added: Option to diffuse widget fanarts
+• Added: "Unwatched Movies" for movie widgets
+• Added: CU LRC Lyrics window 
+• Changed: Increased Music-OSD album thumb size
+• Reworked: PlayerControls dialog
+
+[B][COLOR=FF56ADDA]v4.1.1b[/COLOR][/B]
 • Fixed: Broken widget select animation
 • Fixed: Broken widget content conditions
 • Fixed: Widget arrow positions
