--- a/skin.bellofredo/changelog.txt
+++ b/skin.bellofredo/changelog.txt
@@ -1,4 +1,13 @@
-﻿[B][COLOR=FF56ADDA]v4.1.4b[/COLOR][/B]
+﻿[B][COLOR=FF56ADDA]v4.1.5[/COLOR][/B]
+• Added: Switch to toggle between Unwatched/Watched/Hidden watched flag indicator 
+• Added: Library statistic labels in the home menu (can be disabled)
+• Replaced: InLibrary overlay icon
+• Fixed: More AmbilightMode things
+• Fixed: ThumbNail view episode flag for focused item
+• Fixed: NetFilx landscape fanart conditions. Nobody does noticed that bugs lol.
+• Added: NetFilx - Season info label on the thumbnail
+
+[B][COLOR=FF56ADDA]v4.1.4b[/COLOR][/B]
 Not my day....
 • Fixed: More vignette issues
 • Fixed: Not working Playlist button on MusicOSD
