--- a/script.imdbupdate/resources/language/English/strings.xml
+++ b/script.imdbupdate/resources/language/English/strings.xml
@@ -87,4 +87,5 @@
      <string id="30201">Path for missing TOP250 txt file</string>
      
      <string id="30202">Show Top250</string>
+     <string id="30203">MPAA Update</string>
 </strings>
