--- a/script.imdbupdate/changelog.txt
+++ b/script.imdbupdate/changelog.txt
@@ -1,3 +1,7 @@
+v0.7.0 (2015-04-12):
+- new feature: write missingTop250.csv
+- new feature: update MPAA rating for Movies (Credits to loomes)
+
 v0.6.0 (2015-04-02) (Credits to sualfred):
 - added start parameter for skinners to run all updates
 - fix date parsing issue
