--- a/script.imdbupdate/changelog.txt
+++ b/script.imdbupdate/changelog.txt
@@ -1,3 +1,6 @@
+v0.7.2 (2015-04-02):
+- added start parameter for skinners to run MPAA updates
+
 v0.7.1 (2015-04-12):
 - fix: 'notification' is not defined error
 
