--- a/script.imdbupdate/changelog.txt
+++ b/script.imdbupdate/changelog.txt
@@ -1,4 +1,7 @@
-v0.7.2 (2015-04-02):
+v0.7.3 (2015-04-14):
+- fix: weird syntax error
+
+v0.7.2 (2015-04-12):
 - added start parameter for skinners to run MPAA updates
 
 v0.7.1 (2015-04-12):
