--- a/skin.bellofredo/language/English/strings.po
+++ b/skin.bellofredo/language/English/strings.po
@@ -530,7 +530,9 @@ msgctxt "#31128"
 msgid "Loading. Please wait."
 msgstr ""
 
-#: empty strings from id 31128 to 31129
+msgctxt "#31129"
+msgid "item"
+msgstr ""
 
 msgctxt "#31130"
 msgid "Disable Fanart in all sections"
@@ -632,7 +634,9 @@ msgctxt "#31154"
 msgid "Choose Trailers Add-on"
 msgstr ""
 
-#: empty string with 31155
+msgctxt "#31155"
+msgid "Collection"
+msgstr ""
 
 msgctxt "#31156"
 msgid "Manage Video Views"
