--- a/skin.bellofredo/changelog.txt
+++ b/skin.bellofredo/changelog.txt
@@ -1,4 +1,16 @@
-﻿[B][COLOR=FF56ADDA]v4.1.7b[/COLOR][/B]
+﻿[B][COLOR=FF56ADDA]v4.1.8[/COLOR][/B]
+• Added: Optional background animation settings (disabled, global, only for the home screen, everywhere except the home screen)
+• Added: Default icon for recently introduced GUI sound addons
+• Added: Date/time the repo was last checked for updates information in the addon browser window
+• Merged: Latest German translation
+• Fixed: Not working Watchlist widget with the recently released version of Sandmann's addon
+• Fixed: Visible empty unwatched episodes box in List view, if the info property is empty
+• Fixed: Wrong filled VideoPlayerThumb variable for internet streams
+• Fixed: Position of the cast list in DialogVideoInfo.xml
+• Fixed: Visible actor age in ExtendedInfo dialogs, if the person has already died
+
+
+[B][COLOR=FF56ADDA]v4.1.7b[/COLOR][/B]
 Small bugfix release
 • Fixed: Double TV-MA ratings on LoveFilm view
 • Fixed: Not working addon browser if the Classic Slide view is set in some addons
