--- a/skin.bellofredo/language/English/strings.po
+++ b/skin.bellofredo/language/English/strings.po
@@ -746,7 +746,23 @@ msgctxt "#31182"
 msgid "Last Check for Updates"
 msgstr ""
 
-#: empty strings from id 31182 to 31199
+msgctxt "#31183"
+msgid "Background Animation"
+msgstr ""
+
+msgctxt "#31184"
+msgid "Global"
+msgstr ""
+
+msgctxt "#31185"
+msgid "Only Home Screen"
+msgstr ""
+
+msgctxt "#31186"
+msgid "Only Windows & Dialogs"
+msgstr ""
+
+#: empty strings from id 31184 to 31199
 #: scripts labels
 
 msgctxt "#31200"
