--- a/skin.bellofredo/language/English/strings.po
+++ b/skin.bellofredo/language/English/strings.po
@@ -1,7 +1,7 @@
 # Kodi Media Center language file
-# Addon Name: Bello
-# Addon id: skin.bello
-# Addon Provider: Nessus
+# Addon Name: Bello Fredo
+# Addon id: skin.bellofredo
+# Addon Provider: Sualfred
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Skins\n"
@@ -9,7 +9,7 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Kodi Translation Team\n"
-"Language-Team: English (http://www.transifex.com/projects/p/xbmc-skins/language/en/)\n"
+"Language-Team: English (https://www.transifex.com/organization/skinrefred/team/20108/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -383,7 +383,7 @@ msgid "Episodes"
 msgstr ""
 
 msgctxt "#31092"
-msgid "Automatically update IMDb Top250 & Ratings if the Library has been updated"
+msgid "Auto Update IMDb Top250 & Movie Ratings"
 msgstr ""
 
 msgctxt "#31093"
@@ -762,7 +762,31 @@ msgctxt "#31186"
 msgid "Only Windows & Dialogs"
 msgstr ""
 
-#: empty strings from id 31184 to 31199
+msgctxt "#31187"
+msgid "Top 250"
+msgstr ""
+
+msgctxt "#31188"
+msgid "Movie Ratings"
+msgstr ""
+
+msgctxt "#31189"
+msgid "MPAA"
+msgstr ""
+
+msgctxt "#31190"
+msgid "Update MPAA Ratings"
+msgstr ""
+
+msgctxt "#31191"
+msgid "Update Settings"
+msgstr ""
+
+msgctxt "#31192"
+msgid "Hide Widget Item Counter"
+msgstr ""
+
+#: empty strings from id 31193 to 31199
 #: scripts labels
 
 msgctxt "#31200"
