--- a/script.extendedinfo/changelog.txt
+++ b/script.extendedinfo/changelog.txt
@@ -1,3 +1,12 @@
+v2.0.8
+- adjust youtube user videos to API V3
+- fix c & h webcomics
+- fix for actor info call by name
+- adjust Trakt to API v2
+- localization
+- skip dialog for writermovies / directormovies when called from skin
+- code cosmetics, small bugfixes
+
 v2.0.7
 - added RateMedia call
 - fixes for special chars in search terms for some calls
