--- a/skin.bellofredo/language/French/strings.po
+++ b/skin.bellofredo/language/French/strings.po
@@ -4,13 +4,14 @@
 # Addon Provider: Sualfred
 # Translators:
 # Olivier Zolli <ozolli@gmail.com>, 2015
+# sualfred <su4lfred@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: Bello Fredo\n"
 "Report-Msgid-Bugs-To: alanwww1@xbmc.org\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2015-04-23 13:12+0000\n"
-"Last-Translator: Olivier Zolli <ozolli@gmail.com>\n"
+"PO-Revision-Date: 2015-04-24 19:00+0000\n"
+"Last-Translator: sualfred <su4lfred@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/bello-fredo/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -809,7 +810,22 @@ msgctxt "#31195"
 msgid "Revenue"
 msgstr "Recettes"
 
-#: empty strings from id 31195 to 31199 scripts labels
+msgctxt "#31196"
+msgid "In Production"
+msgstr "En production"
+
+msgctxt "#31197"
+msgid "Post Production"
+msgstr "Post production"
+
+msgctxt "#31198"
+msgid "Ended"
+msgstr "Terminée"
+
+msgctxt "#31199"
+msgid "Returning Series"
+msgstr "Série récurrente"
+
 msgctxt "#31200"
 msgid "My Movies"
 msgstr "Mes films"
@@ -1098,7 +1114,35 @@ msgctxt "#31271"
 msgid "Enable Widget Content Switch Function"
 msgstr "Activer la fonction de changement de widget"
 
-#: empty strings from id 31272 to 31279 Playlist Editor labels
+msgctxt "#31272"
+msgid "Budget"
+msgstr "Budget"
+
+msgctxt "#31273"
+msgid "Place of Birth"
+msgstr "Lieu de naissance"
+
+msgctxt "#31274"
+msgid "Birthday"
+msgstr "Anniversaire"
+
+msgctxt "#31275"
+msgid "Deathday"
+msgstr "Date de décès"
+
+msgctxt "#31276"
+msgid "Also known as"
+msgstr "Aussi connu sous"
+
+msgctxt "#31277"
+msgid "Filmography"
+msgstr "Filmographie"
+
+msgctxt "#31277"
+msgid "Planned"
+msgstr "Prévu"
+
+#: empty strings from id 31279 to 31279 Playlist Editor labels
 msgctxt "#31280"
 msgid "Open Playlist"
 msgstr "Ouvrir Playliste"
@@ -1296,7 +1340,7 @@ msgctxt "#31409"
 msgid ""
 "Choose from a variety of settings and customization options to make \"Bello "
 "Fredo\" fit your needs and taste."
-msgstr "Choisissez parmi des paramètres et des options de personnalisation afin que \\\"Bello Fredo\\\" s'adapte à vos besoins."
+msgstr "Choisissez parmi les paramètres et les options de personnalisation afin que \"Bello Fredo\" s'adapte à vos besoins."
 
 msgctxt "#31410"
 msgid ""
@@ -1353,10 +1397,10 @@ msgctxt "#31431"
 msgid ""
 "You haven't added any items to Favorites yet.[CR]Highlight an item, and "
 "choose \"Add to favorites\" from the context menu."
-msgstr "Vous n'avez pas encore ajouté d'élément aux favoris.[CR]Sélectionnez un élément et choisissez \\\"Ajouter aux favoris\\\" dans le menu contextuel."
+msgstr "Vous n'avez pas encore ajouté d'élément aux favoris.[CR]Sélectionnez un élément et choisissez \"Ajouter aux favoris\" dans le menu contextuel."
 
 msgctxt "#31432"
 msgid ""
 "Mouse usage is not supported.[CR]Please disable it from "
 "Settings>System>Input Devices>[CR]\"Enable mouse and Touch Screen support\"."
-msgstr "L'utilisation de la souris n'est pas supportée.[CR]Merci de désactiver son usage dans Paramètres>Système>Périphériques>[CR]\\\"Activer le support de la souris\\\""
+msgstr "L'utilisation de la souris n'est pas supportée.[CR]Merci de désactiver son usage dans Paramètres>Système>Périphériques>[CR]\"Activer le support de la souris\""
