--- a/script.imdbupdate/changelog.txt
+++ b/script.imdbupdate/changelog.txt
@@ -1,3 +1,7 @@
+v0.7.4 (2015-05-03):
+- fix: US as default MPAA system
+- new: combine start parameters
+
 v0.7.3 (2015-04-14):
 - fix: weird syntax error
 
