--- a/skin.bellofredo/language/English/strings.po
+++ b/skin.bellofredo/language/English/strings.po
@@ -1389,6 +1389,18 @@ msgctxt "#31339"
 msgid "Back"
 msgstr ""
 
+msgctxt "#31340"
+msgid "Case Style"
+msgstr ""
+
+msgctxt "#31341"
+msgid "Retail Box"
+msgstr ""
+
+msgctxt "#31342"
+msgid "Artist Logo"
+msgstr ""
+
 #: empty strings from id 31335 to 31349 PVR
 msgctxt "#31350"
 msgid "Available Groups"
