--- a/script.imdbupdate/resources/language/English/strings.xml
+++ b/script.imdbupdate/resources/language/English/strings.xml
@@ -88,4 +88,5 @@
      
      <string id="30202">Show Top250</string>
      <string id="30203">MPAA Update</string>
+     <string id="30204">Choose your MPAA system</string>
 </strings>
