--- a/script.imdbupdate/resources/language/German/strings.xml
+++ b/script.imdbupdate/resources/language/German/strings.xml
@@ -87,4 +87,5 @@
      <string id="30201">Pfad zur txt-Datei fehlt TOP250</string>
      
      <string id="30202">Zeige Top250</string>
+     <string id="30204">Wähle dein MPAA System</string>
 </strings>
