--- a/script.imdbupdate/changelog.txt
+++ b/script.imdbupdate/changelog.txt
@@ -1,3 +1,16 @@
+v0.8.2 (2015-05-10):
+- fix: don't ignore duplicate movies during Top250 update
+
+v0.8.1 (2015-05-10):
+- fix: hidden setting option
+
+v0.8.0 (2015-05-10):
+- new: setting to show missing Top250 after each run
+- new: ask for MPAA system on first run
+- new: added MPAA API key
+- new: run MPAA periodically
+- fix: MPAA settings
+
 v0.7.4 (2015-05-03):
 - fix: US as default MPAA system
 - new: combine start parameters
