--- a/skin.bellofredo/language/English/strings.po
+++ b/skin.bellofredo/language/English/strings.po
@@ -1583,6 +1583,30 @@ msgctxt "#31387"
 msgid "Press Play to continue with the next episode"
 msgstr ""
 
+msgctxt "#31388"
+msgid "Latest Movie"
+msgstr ""
+
+msgctxt "#31389"
+msgid "Latest Episode"
+msgstr ""
+
+msgctxt "#31390"
+msgid "Latest Album"
+msgstr ""
+
+msgctxt "#31391"
+msgid "Latest Song"
+msgstr ""
+
+msgctxt "#31392"
+msgid "Continue with next episode?"
+msgstr ""
+
+msgctxt "#31393"
+msgid "Still there? Otherwise I'll stop."
+msgstr ""
+
 #: empty strings from id 31383 to 31408 settings Category Description & Header
 #: Labels
 msgctxt "#31409"
