--- a/skin.bellofredo/language/English/strings.po
+++ b/skin.bellofredo/language/English/strings.po
@@ -1607,6 +1607,34 @@ msgctxt "#31393"
 msgid "Still there? Otherwise I'll stop."
 msgstr ""
 
+msgctxt "#31394"
+msgid "TV Tunes Add-on"
+msgstr ""
+
+msgctxt "#31395"
+msgid "Next Aired Add-on"
+msgstr ""
+
+msgctxt "#31396"
+msgid "NextUp Add-on"
+msgstr ""
+
+msgctxt "#31397"
+msgid "Protected"
+msgstr ""
+
+msgctxt "#31398"
+msgid "Top"
+msgstr ""
+
+msgctxt "#31399"
+msgid "Bottom"
+msgstr ""
+
+msgctxt "#31400"
+msgid "Enable Auto Update on Startup"
+msgstr ""
+
 #: empty strings from id 31383 to 31408 settings Category Description & Header
 #: Labels
 msgctxt "#31409"
