--- a/skin.bellofredo/changelog.txt
+++ b/skin.bellofredo/changelog.txt
@@ -1,3 +1,10 @@
+[B][COLOR=FF56ADDA]v4.4.8[/COLOR][/B]
+• Fixed: ClassicSlide previos texture issue while moving
+• Fixed: Unmatched parentheses errors and other code issues
+• Fixed: Fall back of A_DTS / A_EAC3 video flags
+• Fixed: Small navigation issue in Skin Settings
+• Changed: Clock with start / finish time will be displayed if the player is paused
+
 [B][COLOR=FF56ADDA]v4.4.7[/COLOR][/B]
 • Fixed: Plot for sets (Shelf)
 • Fixed: Visible empty disc art if "group movies to sets" is activated (Shelf)
