--- a/skin.bellofredo/language/English/strings.po
+++ b/skin.bellofredo/language/English/strings.po
@@ -1914,3 +1914,18 @@ msgid ""
 "contents. [CR]Example: Shelf only will only work for Movies/Sets/TV "
 "Shows/Seasons and the add-on has to set its content correctly."
 msgstr ""
+
+#: \shortcuts\shutdownmenu.DATA.xml:158
+msgctxt "#31467"
+msgid "Logout"
+msgstr ""
+
+#: \720p\SkinSettings.xml:424
+msgctxt "#31468"
+msgid "Edit Shutdown Menu Items"
+msgstr ""
+
+#: \720p\SkinSettings.xml:418
+msgctxt "#31469"
+msgid "Shutdown Menu"
+msgstr ""
