--- a/script.imdbupdate/changelog.txt
+++ b/script.imdbupdate/changelog.txt
@@ -1,4 +1,9 @@
-v0.8.2 (2015-05-10):
+v0.8.3 (2015-07-13):
+- new: setting for vote thousands separator
+- chore: better log messages
+- chore: grunt as build system
+
+v0.8.2 (2015-05-27):
 - fix: don't ignore duplicate movies during Top250 update
 
 v0.8.1 (2015-05-10):
