--- a/skin.bellofredo/changelog.txt
+++ b/skin.bellofredo/changelog.txt
@@ -1,3 +1,10 @@
+[B][COLOR=FF56ADDA]v4.5.4[/COLOR][/B]
+• Added: New custom widget path selection method (based on the lastest Skinshortcuts GitHub release)
+• Added: Valid source check for custom widget path
+• Added: Option to change the right bottom custom widget label
+• Changed: Some conditions, which can cause overlappings
+• Merged: Translations
+
 [B][COLOR=FF56ADDA]v4.5.3[/COLOR][/B]
 • Changed: Increased the logo size in NetFilx
 • Changed: Improved the movement controls for the menu editing dialog
