--- a/skin.bellofredo/language/English/strings.po
+++ b/skin.bellofredo/language/English/strings.po
@@ -1326,7 +1326,7 @@ msgid "Mixed item group"
 msgstr ""
 
 msgctxt "#31324"
-msgid "Extract custom path from a existing favourite"
+msgid "Select custom path"
 msgstr ""
 
 msgctxt "#31325"
@@ -1342,7 +1342,7 @@ msgid "Other custom path (extracted from a favourite)"
 msgstr ""
 
 msgctxt "#31328"
-msgid "Add own or edit existing extracted path"
+msgid "Add own or edit existing custom path"
 msgstr ""
 
 msgctxt "#31329"
@@ -1911,8 +1911,8 @@ msgstr ""
 msgctxt "#31466"
 msgid ""
 "Please note that a lot of views are only available for some sorts of "
-"contents. [CR]Example: Shelf only will work for Movies/Sets/TV "
-"Shows/Seasons and the add-on has to set its content correctly."
+"contents. [CR]Example: Shelf only will work for Movies/Sets/TV Shows/Seasons"
+" and the add-on has to set its content correctly."
 msgstr ""
 
 #: \shortcuts\shutdownmenu.DATA.xml:158
@@ -1942,4 +1942,8 @@ msgstr ""
 
 msgctxt "#31472"
 msgid "Banner Art"
+msgstr ""
+
+msgctxt "#31473"
+msgid "[COLOR=invalid]Error: No valid path[/COLOR]"
 msgstr ""
