--- a/skin.bellofredo/changelog.txt
+++ b/skin.bellofredo/changelog.txt
@@ -1,3 +1,8 @@
+[B][COLOR=FF56ADDA]v4.6.0[/COLOR][/B]
+• Added: Simple weather widget
+• Fixed: Vertical menu widget positions if the item counter is disabled
+• Changed: Added soft transparency to widgets where the icons/arts don't fill the complete thumbnail dimension
+
 [B][COLOR=FF56ADDA]v4.5.9a[/COLOR][/B]
 • Fixed: Color diffuse issues with icon and bottom label menu
 
