--- a/script.imdbupdate/script.imdbupdate/changelog.txt
+++ b/script.imdbupdate/script.imdbupdate/changelog.txt
@@ -1,3 +1,20 @@
+v0.8.8 (2015-10-07):
+- new: add MPAA ratings for australian and netherlands
+
+v0.8.7 (2015-10-07):
+- chore: use new altersfreigaben.de API
+
+v0.8.6 (2015-09-29):
+- revert: error if movie library is empty
+
+v0.8.5 (2015-09-28):
+- new: option to set browser language for imdb.com
+- fix: parse votes error
+- fix: error if movie library is empty
+
+v0.8.4 (2015-09-07):
+- fix: format votes error
+
 v0.8.3 (2015-07-13):
 - new: setting for vote thousands separator
 - chore: better log messages
