--- a/plugin.audio.prime_music/changelog.txt
+++ b/plugin.audio.prime_music/changelog.txt
@@ -1,3 +1,11 @@
+0.2.4
+- Login fix as amazon changed their login site
+0.2.3
+- auto relogin on coockie timeout
+- changed default icon, using prime music icon now
+0.2.2
+- Made the dvd-player enforcement configurable
+- New background fanart (thx nexusle@kodinerds)
 0.2.1
 - Choosing the dvdplayer now explicitly via python code, no further editing of config file needed for stutter-free playback
 0.2.0
