--- a/skin.fTVfred-krypton/language/resource.language.en_gb/strings.po
+++ b/skin.fTVfred-krypton/language/resource.language.en_gb/strings.po
@@ -1280,6 +1280,26 @@ msgctxt "#31293"
 msgid "Changes the OSD layout of the Live TV channels.[CR]Default is 'Horizontal'."
 msgstr ""
 
+#: /16x9/VideoOSDBookmarks.xml
+msgctxt "#31294"
+msgid "No boomarks available"
+msgstr ""
+
+#: /16x9/Variables.xml
+msgctxt "#31295"
+msgid "Hardware decoding is active"
+msgstr ""
+
+#: /16x9/Variables.xml
+msgctxt "#31296"
+msgid "Hardware decoding is inactive"
+msgstr ""
+
+#: /16x9/IncludesDialogSettings.xml
+msgctxt "#31297"
+msgid "Media Processing Info"
+msgstr ""
+
 msgctxt "#31500"
 msgid "Widget Group 1"
 msgstr "Widget Group 1"
