--- a/skin.fTVfred-krypton/changelog.txt
+++ b/skin.fTVfred-krypton/changelog.txt
@@ -1,5 +1,12 @@
 Changelog:
 
+3.1.2
+- Redesigned "3D Options" and "Subtitle Options" OSD
+- Added subtitle styling options to VideoOSD
+- Added "no subtitle service" check to the subtitle download dialog
+- Added 720p label to VideoPlayer
+- Other minor adjustmens
+
 3.1.1
 - Improved boomarks dialog
 - Increased font size of video player titles
