--- a/skin.fTVfred-krypton/language/resource.language.en_gb/strings.po
+++ b/skin.fTVfred-krypton/language/resource.language.en_gb/strings.po
@@ -1087,8 +1087,8 @@ msgstr "Recommended Movie/Show"
 
 #: /16x9/VideoOSDSettings.xml:146
 msgctxt "#31255"
-msgid "3D enabled"
-msgstr "3D enabled"
+msgid "3D"
+msgstr "3D"
 
 #: /16x9/VideoOSDSettings.xml:167
 msgctxt "#31256"
@@ -1298,6 +1298,31 @@ msgstr ""
 #: /16x9/IncludesDialogSettings.xml
 msgctxt "#31297"
 msgid "Media processing info"
+msgstr ""
+
+#: /16x9/VideoOSD.xml
+msgctxt "#31298"
+msgid "Subtitle styling"
+msgstr ""
+
+#: /16x9/VideoOSD.xml
+msgctxt "#31299"
+msgid "Shift[CR]Up"
+msgstr ""
+
+#: /16x9/VideoOSD.xml
+msgctxt "#31300"
+msgid "Shift[CR]Down"
+msgstr ""
+
+#: /16x9/VideoOSD.xml
+msgctxt "#31301"
+msgid "Pos."
+msgstr ""
+
+#: /16x9/VideoOSD.xml
+msgctxt "#31302"
+msgid "Offset"
 msgstr ""
 
 msgctxt "#31500"
