--- a/skin.fTVfred-krypton/language/resource.language.en_gb/strings.po
+++ b/skin.fTVfred-krypton/language/resource.language.en_gb/strings.po
@@ -1307,7 +1307,7 @@ msgstr ""
 
 #: /16x9/VideoOSD.xml
 msgctxt "#31299"
-msgid "Shift[CR]Up"
+msgid "Shift"
 msgstr ""
 
 #: /16x9/VideoOSD.xml
@@ -1317,12 +1317,37 @@ msgstr ""
 
 #: /16x9/VideoOSD.xml
 msgctxt "#31301"
-msgid "Pos."
+msgid "Mode"
 msgstr ""
 
 #: /16x9/VideoOSD.xml
 msgctxt "#31302"
 msgid "Offset"
+msgstr ""
+
+#: /16x9/VideoOSD.xml
+msgctxt "#31303"
+msgid "Apply"
+msgstr ""
+
+#: /16x9/VideoOSD.xml
+msgctxt "#31304"
+msgid "Shift [B]UP[/B]"
+msgstr ""
+
+#: /16x9/VideoOSD.xml
+msgctxt "#31305"
+msgid "Shift [B]DOWN[/B]"
+msgstr ""
+
+#: /16x9/VideoOSD.xml
+msgctxt "#31306"
+msgid "Offset [B]MINUS[/B]"
+msgstr ""
+
+#: /16x9/VideoOSD.xml
+msgctxt "#31307"
+msgid "Offset [B]PLUS[/B]"
 msgstr ""
 
 msgctxt "#31500"
